--- a/views/viewlog.ejs
+++ b/views/viewlog.ejs
@@ -26,6 +26,6 @@
         </table>
 
 
-        <a href="/home"><button class="btn btn-primary"><span class="fa fa-home"></span></button></a>
+        <a href="/"><button class="btn btn-primary"><span class="fa fa-home"></span></button></a>
     </body>
 </html>
