--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,22 +4,30 @@
         <title>main</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel='stylesheet' href='/stylesheets/style.css' />
+        <link rel='stylesheet' href='/stylesheets/style.css'>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script type="text/javascript" src="/ajax/mainscript.js"></script>
     </head>
+
     <body>
-
+    <!--
         <form name=f1 action="">
-            <fieldset>
-                <p></p>
-                <h1>Check In System</h1>
+            <p id="message"></p>
+            <h1>Check In System</h1>
 
-                <div>
-                    <p><input placeholder="Student ID" value="" name="idnumber" required></p>
-                    <button type="submit" class="btn btn-success fa fa-sign-in" onclick="f1.action='/userCheck';return true;"></button>
-                    <button type="submit" class="btn btn-primary fa fa-calendar" onclick="f1.action='/users/viewlog'; return true;"></button>
+            <div>
+                <p><input name="idnumber" id="idnumber" placeholder="Student ID" value=""></p>
+                <button type="submit" class="btn btn-success fa fa-sign-in" onclick="f1.action='home/login';return true;"></button>
+                <button type="submit" class="btn btn-primary fa fa-calendar" onclick="f1.action='viewlog'; return true;"></button>
 
-                </div>
-            </fieldset>
+            </div>
         </form>
+        //-->
+        <h1>Check In System</h1>
+        <div>
+            <p><input id="idnumber" placeholder="Student ID" value=""></p>
+            <button class="btn btn-success fa fa-sign-in" id="loginBtn"></button>
+            <button class="btn btn-primary fa fa-calendar" id="viewlogBtn"></button>
+        </div>
     </body>
 </html>
