Changed check in / check out button link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,24 +10,24 @@
     </head>
 
     <body>
-    <!--
         <form name=f1 action="">
             <p id="message"></p>
             <h1>Check In System</h1>
 
             <div>
                 <p><input name="idnumber" id="idnumber" placeholder="Student ID" value=""></p>
-                <button type="submit" class="btn btn-success fa fa-sign-in" onclick="f1.action='home/login';return true;"></button>
+                <button type="submit" class="btn btn-success fa fa-sign-in" onclick="f1.action='userCheck';return true;"></button>
                 <button type="submit" class="btn btn-primary fa fa-calendar" onclick="f1.action='viewlog'; return true;"></button>
 
             </div>
         </form>
-        //-->
-        <h1>Check In System</h1>
-        <div>
-            <p><input id="idnumber" placeholder="Student ID" value=""></p>
-            <button class="btn btn-success fa fa-sign-in" id="loginBtn"></button>
-            <button class="btn btn-primary fa fa-calendar" id="viewlogBtn"></button>
-        </div>
+
+
+        <!--<h1>Check In System</h1>-->
+        <!--<div>-->
+            <!--<p><input id="idnumber" placeholder="Student ID" value=""></p>-->
+            <!--<button class="btn btn-success fa fa-sign-in" id="loginBtn"></button>-->
+            <!--<button class="btn btn-primary fa fa-calendar" id="viewlogBtn"></button>-->
+        <!--</div>-->
     </body>
 </html>
