Ajax support added to home page and viewlog page.  ajax directory added to public folder, containing two jquery files, mainscript.js and viewlogscript.js.
viewlog.js in routes was slightly altered, so that it supports ajax calls.

Additional data model added into the model directory to support future implementation of database schema.

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -23,11 +23,15 @@
             </div>
         </form>
         //-->
+
         <h1>Check In System</h1>
+
         <div>
-            <p><input id="idnumber" placeholder="Student ID" value=""></p>
+            <p><input id="idnumber" placeholder="Student ID" value="" required></p>
             <button class="btn btn-success fa fa-sign-in" id="loginBtn"></button>
             <button class="btn btn-primary fa fa-calendar" id="viewlogBtn"></button>
         </div>
+
+        <h2 id="message">Messages</h2>
     </body>
 </html>
