--- a/views/viewlog.ejs
+++ b/views/viewlog.ejs
@@ -7,8 +7,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel='stylesheet' href='/stylesheets/style.css' />
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script type="text/javascript" src="/ajax/viewlogscript.js"></script>
     </head>
     <body>
         <h1>Hours</h1>
@@ -23,10 +21,23 @@
                 </tr>
             </thead>
             <tbody>
+            <tr>
+                <td>Dummy Date</td>
+                <td>0:00:00</td>
+                <td>1:00:11</td>
+                <td>1</td>
+            </tr>
 
+
+            <tr>
+                <td>Dummy Date</td>
+                <td>0:00:00</td>
+                <td>1:00:11</td>
+                <td>1</td>
+            </tr>
             </tbody>
         </table>
 
-        <button class="btn btn-primary" id="homepageBtn"><span class="fa fa-home"></span></button>
+        <a href="/home"><button class="btn btn-primary" id="homepageBtn"><span class="fa fa-home"></span></button></a>
     </body>
 </html>
