--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,40 @@
 body {
-
-  text-align: center;
-  align-content: center;
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    text-align: center;
+    align-content: center;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+
+button{
+    width: 20%;
+    height: 40px;
+    margin: 25px;
+    box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0,0,0,0.6);
+    display: block;
+    font-size: 1.1em;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #ccc;
+    background-color: #555;
+    background: -webkit-linear-gradient(#888, #555);
+    background: linear-gradient(#888, #555);
+    border: 0 none;
+    border-radius: 3px;
+    text-shadow: 0 -1px 0 #000;
+    box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0,0,0,0.6);
+    cursor: pointer;
+}
+
+input{
+    width: 50%;
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+h1{
+    text-shadow: -1px -1px 1px #000;
 }
