--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #47B6FF;
     text-align: center;
     align-content: center;
     padding: 50px;
@@ -10,10 +11,10 @@ a {
 }
 
 button{
-    width: 20%;
+    width: auto;
+    min-width: 300px;
     height: 40px;
     margin: 25px;
-    box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0,0,0,0.6);
     display: block;
     font-size: 1.1em;
     font-weight: bold;
@@ -30,11 +31,14 @@ button{
 }
 
 input{
-    width: 50%;
+    width: 59%;
+    min-width: 250px;
     margin-top: 50px;
     margin-bottom: 25px;
+    background-color: #FFF;
 }
 
 h1{
     text-shadow: -1px -1px 1px #000;
+    color: #FFF;
 }
