--- a/views/viewlog.ejs
+++ b/views/viewlog.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -35,6 +34,6 @@
             </tbody>
         </table>
 
-        <a href="/"><button class="btn btn-primary"><span class="fa fa-home fa-2x"></span>  Home</button></a>
+        <a href="/"><button class="btn btn-warning"><span class="fa fa-home fa-2x"></span>  Home</button></a>
     </body>
 </html>
