--- a/views/notificationPage.ejs
+++ b/views/notificationPage.ejs
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-    <div class="container">
+    <div class="container notificationPage">
         <h2><%= notification %></h2>
         <p><em><%- message %></em></p>
         <br><br>
