--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel='stylesheet' href='/stylesheets/style.css'>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         <script type="text/javascript" src="/ajax/mainscript.js"></script>
     </head>
 
@@ -14,7 +16,7 @@
             <h1>Check In System</h1>
 
             <div>
-                <p><input class="input-lg" name="idnumber" id="idnumber" placeholder="Student ID" value="" required></p>
+                <p><input class="input-lg" name="idnumber" id="idnumber" placeholder="Student ID" required></p>
                 <button type="submit" id="userCheck" class="btn btn-success" onclick="f1.action='userCheck';return true;">
                     <span class="fa fa-sign-in fa-2x">  Sign In/Out</span>
                 </button>
@@ -23,5 +25,18 @@
                 </button>
             </div>
         </form>
+
+        <script>
+            // Creating an array of IDs gathered from the database
+            var employees = [];
+            <% for (var i = 0; i < employees.length; i++) {%>
+                employees.push('<%= employees[i] %>');
+            <% } %>
+
+            // Passing in the array for autocompletion of the student ID input field
+            $('#idnumber').autocomplete({
+                source: employees
+            });
+        </script>
     </body>
 </html>
