Changed input type to number for mobile

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -16,7 +16,7 @@
             <h1>Check In System</h1>
 
             <div>
-                <p><input inputmode="numeric" class="input-lg" name="idnumber" id="idnumber" placeholder="Student ID" required></p>
+                <p><input type="number" class="input-lg" name="idnumber" id="idnumber" placeholder="Student ID" required></p>
                 <button type="submit" id="userCheck" class="btn btn-success" onclick="f1.action='userCheck';return true;">
                     <span class="fa fa-sign-in fa-2x">  Sign In/Out</span>
                 </button>
