--- a/views/viewlog.ejs
+++ b/views/viewlog.ejs
@@ -2,6 +2,7 @@
 <html>
 
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>viewlog</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -10,18 +11,18 @@
         <script type="text/javascript" src="/ajax/mainscript.js"></script>
     </head>
     <body>
-
-        <h1>Employee: <%=employeeID%> <br><br> Work Hours<br><br></h1>
-        <table class="table table-striped">
-            <thead>
+        <div class="container">
+            <h1>Employee: <%=employeeID%> <br><br> Work Hours<br><br></h1>
+            <table class="table table-striped">
+                <thead>
                 <tr>
                     <td><strong>Date</strong></td>
                     <td><strong>Start Time</strong></td>
                     <td><strong>End Time</strong></td>
-                    <td><strong>Duration</strong></td>
+                    <td><strong>Total Time</strong></td>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
 
                 <% for(i=0;i<employeeInfo.length;i++) {%>
                 <tr>
@@ -31,9 +32,9 @@
                     <td><%=employeeInfo[i].duration%></td>
                 </tr>
                 <% } %>
-            </tbody>
-        </table>
-
-        <a href="/"><button class="btn btn-warning"><span class="fa fa-home fa-2x"></span>  Home</button></a>
+                </tbody>
+            </table>
+            <a href="/"><button class="btn btn-warning"><span class="fa fa-home fa-2x"></span>  Home</button></a>
+        </div>
     </body>
 </html>
